deepseek-eks-automode/kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepseek-r1-32b-japanese
  namespace: inference
  labels:
    app: deepseek-r1-32b-japanese
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepseek-r1-32b-japanese
  template:
    metadata:
      labels:
        app: deepseek-r1-32b-japanese
    spec:
      nodeSelector:
        'node.kubernetes.io/instance-type': 'g6.12xlarge'
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
      volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 10Gi
          name: cache-volume
      containers:
        - name: vllm
          image: vllm/vllm-openai:v0.7.0
          resources:
            limits:
              memory: '80Gi'
              cpu: '24'
              nvidia.com/gpu: 4
            requests:
              memory: '40Gi'
              cpu: '6'
              nvidia.com/gpu: 4
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 30
          args:
            - --model=cyberagent/DeepSeek-R1-Distill-Qwen-32B-Japanese
            - --tensor-parallel-size=4
            - --max-model-len=16000
            - --enforce-eager
          volumeMounts:
            - mountPath: /dev/shm
              name: cache-volume
          ports:
            - containerPort: 8000
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: deepseek-r1-32b-japanese
  namespace: inference
  labels:
    app: deepseek-r1-32b-japanese
spec:
  selector:
    app: deepseek-r1-32b-japanese
  ports:
    - protocol: TCP
      port: 8000
      name: http
  type: ClusterIP
